--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p id="description6n1" class="textstyle"></p>
             <p id="description6n2" class="textstyle"></p>
             <p id="description6n3" class="textstyle"></p>
-            <button id="button6" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
+            <button id="button6" class="buttonbar" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
         </section>
         <section id="section7">
             <h2 id="title7" class="titlestyle"></h2>
@@ -165,16 +165,14 @@
                 <img id = "img7n1" src="img/food1.jpg">
                 <img id = "img7n2" src="img/food2.jpg">
             </div>
-            <button id="button7" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
+            <button id="button7" class="buttonbar" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
         </section>
         <section id="section8">
             <h2 id="title8" class="titlestyle"></h2>
             <div id="sub8n1"> 
                 <div id="sub8n2">
                     <p class="textstyle">Silvia:<br>+49 15782215018</p>
-                    <br>
                     <p class="textstyle">Joachim:<br>+49 17691385504</p>
-                    <br>
                     <p id="giusyphone" class="textstyle">Giusy:<br>+49 175 2133702</p>
                 </div>
                 <img id="img8" src="img/couple.jpeg">
