--- a/index.html
+++ b/index.html
@@ -154,8 +154,23 @@
         <section id="section6">
             <h2 id="title6" class="titlestyle"></h2>
             <p id="description6n1" class="textstyle"></p>
-            <p id="description6n2" class="textstyle"></p>
-            <p id="description6n3" class="textstyle"></p>
+            <p class="textstyle">
+                <a id="description6n2"></a>
+                <br>
+                <a class="textstyle">Silvia Lo Muzio</a>
+                <br>
+                <a class="textstyle">DE17 2022 0800 0028 2910 78</a>
+            </p>
+            <p class="textstyle">
+                <a id="description6n3"></a>
+                <br>
+                <a class="textstyle">Silvia Lo Muzio, Joachim Leibold</a>
+                <br>
+                <a class="textstyle">St.-Cajetan-Straße 5</a>
+                <br>
+                <a class="textstyle">81669</a>
+                <a id="description6n4"></a>
+            </p>
             <button id="button6" class="buttonbar" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
         </section>
         <section id="section7">
