--- a/index.html
+++ b/index.html
@@ -171,16 +171,16 @@
                 <a class="textstyle">81669</a>
                 <a id="description6n4"></a>
             </p>
-            <button id="button6" class="buttonbar" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
+            <button id="button6" class="subtitlestyle buttonbar" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
         </section>
         <section id="section7">
-            <h2 id="title7" class="titlestyle"></h2>
+            <h2 id="title7" class="subtitlestyle"></h2>
             <p id="description7" class="textstyle"></p>
             <div id = "sub7">
                 <img id = "img7n1" src="img/food1.jpg">
                 <img id = "img7n2" src="img/food2.jpg">
             </div>
-            <button id="button7" class="buttonbar" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
+            <button id="button7" class="subtitlestyle buttonbar" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
         </section>
         <section id="section8">
             <h2 id="title8" class="titlestyle"></h2>
