--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <button id="button6" class="subtitlestyle buttonbar" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
         </section>
         <section id="section7">
-            <h2 id="title7" class="subtitlestyle"></h2>
+            <h2 id="title7" class="titlestyle"></h2>
             <p id="description7" class="textstyle"></p>
             <div id = "sub7">
                 <img id = "img7n1" src="img/food1.jpg">
