Corretti intestatari conto corrente

--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
             <p class="textstyle">
                 <a id="description6n2"></a>
                 <br>
-                <a class="textstyle">Silvia Lo Muzio</a>
+                <a class="textstyle">Silvia lo Muzio, Joachim Leibold</a>
                 <br>
                 <a class="textstyle">DE17 2022 0800 0028 2910 78</a>
             </p>
             <p class="textstyle">
                 <a id="description6n3"></a>
                 <br>
-                <a class="textstyle">Silvia Lo Muzio, Joachim Leibold</a>
+                <a class="textstyle">Silvia lo Muzio, Joachim Leibold</a>
                 <br>
                 <a class="textstyle">St.-Cajetan-Straße 5</a>
                 <br>
