Add playlist section and translations for song suggestions

--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
             <h2 id="title10" class="titlestyle"></h2>
             <p id="description10" class="textstyle"></p>
         </section>
+        <section id="section11">
+            <h2 id="title11" class="titlestyle"></h2>
+            <p id="description11" class="textstyle"></p>
+            <button id="button11" class="subtitlestyle buttonbar" onclick="window.open('https://open.spotify.com/playlist/2K|10pLYelDjqx2XEoXSiU?si=77daJLg2RsKtPWj3CQPlsw&pt=29174b032a8e571b6103390f78a87665&pi=L9YfRTFrTcqCj', '_blank');"></button>
+        </section>
         <section id="section7">
             <h2 id="title7" class="titlestyle"></h2>
             <p id="description7" class="textstyle"></p>
