--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <section id="section11">
             <h2 id="title11" class="titlestyle"></h2>
             <p id="description11" class="textstyle"></p>
-            <button id="button11" class="subtitlestyle buttonbar" onclick="window.open('https://open.spotify.com/playlist/2K|10pLYelDjqx2XEoXSiU?si=77daJLg2RsKtPWj3CQPlsw&pt=29174b032a8e571b6103390f78a87665&pi=L9YfRTFrTcqCj', '_blank');"></button>
+            <button id="button11" class="subtitlestyle buttonbar" onclick="window.open('https://open.spotify.com/playlist/2Kl1OpLYelDjqx2XEoXSiU?si=9ViQsSSsSweeEekJg42-EQ&pt=85389425ceba4679c479a73c5ac498a7&pi=JR5MvRO7QNWXZ', '_blank');"></button>
         </section>
         <section id="section7">
             <h2 id="title7" class="titlestyle"></h2>
