Refactor section 7 descriptions and buttons for improved clarity and functionality

--- a/index.html
+++ b/index.html
@@ -185,12 +185,14 @@
         </section>
         <section id="section7">
             <h2 id="title7" class="titlestyle"></h2>
-            <p id="description7" class="textstyle"></p>
+            <p id="description7n1" class="textstyle"></p>
             <div id = "sub7">
                 <img id = "img7n1" src="img/food1.jpg">
                 <img id = "img7n2" src="img/food2.jpg">
             </div>
-            <button id="button7" class="subtitlestyle buttonbar" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
+            <button id="button7n1" class="subtitlestyle buttonbar" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeR_ZzqyjOSfH4aDd98d3WgrCfnu4a0AiNsXbqeHlG9YQDYJQ/viewform', '_blank');"></button>
+            <p id="description7n2" class="textstyle"></p>
+            <button id="button7n2" class="subtitlestyle buttonbar" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSfrzMT-PfUiSRfYsuIPMTRwC17BEewlOAwRs6ueWfWkBSSRYQ/viewform', '_blank');"></button>
         </section>
         <section id="section8">
             <h2 id="title8" class="titlestyle"></h2>
