--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 <p><a class="right_container textstyle" id="timeline2n4"></a></p>
                 <p><a class="left_container textstyle" id="timeline2n5"></a></p>
                 <p><a class="right_container textstyle" id="timeline2n6"></a></p>
+                <p><a class="left_container textstyle" id="timeline2n7"></a></p>
             </div>
         </section>
         <section id="section9">
