--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                 <p><a class="left_container textstyle" id="timeline2n5"></a></p>
                 <p><a class="right_container textstyle" id="timeline2n6"></a></p>
                 <p><a class="left_container textstyle" id="timeline2n7"></a></p>
+                <p><a class="right_container textstyle" id="timeline2n8"></a></p>
+                <p><a class="left_container textstyle" id="timeline2n9"></a></p>
+                <p><a class="right_container textstyle" id="timeline2n10"></a></p>
+                <p><a class="left_container textstyle" id="timeline2n11"></a></p>
             </div>
         </section>
         <section id="section9">
