Add additional description for wedding gift delivery in multiple languages

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                 <a class="textstyle">81669</a>
                 <a id="description6n4"></a>
             </p>
+            <p id="description6n5" class="textstyle"></p>
             <button id="button6" class="subtitlestyle buttonbar" onclick="window.open('https://docs.google.com/spreadsheets/d/1-YE0Swj6ge3SqlC9Mq3mPlOTRVpFL4XvMTEJafrJdjQ/edit?usp=drivesdk', '_blank');"></button>
         </section>
         <section id="section10">
